--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="gallery.html">Gallery</a></li>
-      <li><a href="store.html">Shop</a></li>
-      <li><a href="contact.html">Contact/Location</a></li>
-      <li><a href="hire.html">Hire</a></li>
+      <li><a href="/HTML/gallery.html">Gallery</a></li>
+      <li><a href="/HTML/store.html">Shop</a></li>
+      <li><a href="/HTML/contact.html">Contact/Location</a></li>
+      <li><a href="/HTML/hire.html">Hire</a></li>
     </ul>
   </nav>
 
