--- a/HTML/store.html
+++ b/HTML/store.html
@@ -18,7 +18,7 @@
         </div>
 
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="store.html">Shop</a></li>
             <li><a href="contact.html">Contact/Location</a></li>
