--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -26,7 +26,7 @@
     </ul>
   </nav>
 
-  <div class="container" style="background-color: rgba(14, 13, 12, 0.712);">
+  <div class="container">
     <h2 style="color: white;">Have any questions for us? Contact us below, or call 1234 567 567</h2>
   </div>
 
