--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -26,7 +26,7 @@
     </ul>
   </nav>
 
-  <div class="container" style="background-color: rgba(14, 13, 12, 0.712);">
+  <div class="container">
     <h2 style="color:rgb(248, 246, 245);">Welcome to our gallery. Thank you to our customers for sending in their
       pictures. Enjoying their new purchases! </h2>
   </div>
