--- a/HTML/store.html
+++ b/HTML/store.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
 
-    <div class="container" style="background-color: rgba(14, 13, 12, 0.712);">
+    <div class="container">
         <h2>What are you waiting for? Get your hands on these deals!</h2>
     </div>
 
