--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
   <form action="action_page.php">
-    <div class="container" style="background-color: rgba(14, 13, 12, 0.712);">
+    <div class="container">
       <h2 id="welcomeh2">Welcome to Bike King Borders. Ready to ride?</h2>
       <h2 style="color: rgb(238, 131, 9);">Subscribe to our Newsletter!</h2>
       <input type="text" placeholder="Name" name="name" required>
