--- a/HTML/hire.html
+++ b/HTML/hire.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
 
-    <div class="container" style="background-color: rgba(14, 13, 12, 0.712);">
+    <div class="container">
 
         <h2>Look no further. We have what you need...</h2>
 
